TODO
* add UTF-16 information value functions
* make sure error_ranges is cleared on open
* configure validate libuna and libbfio check
* work on libsmdev_metadata
  - add information values functions (libsmio)

Library
* add glib support
* move fstat to file_io ?
Read:
* windows read error retry support
Media information:
* add Windows support for accessing memory device
* detect removable disk
* detect optical disk
* determine optical disk sessions
* detect floppy
* detect bus type
* determine USB serial number
* use pre windows XP io control codes as fallback ?
* add support for reading from floppy \\.\A: for builder5 compilation

Beta release
* remove deprecated functions in libsmdev_legacy.[ch]

Deployment
* add msvscpp files
* add borlandc files
* add macosx files

Test:
* add autoconf/make test suite

20110625
* changes for: warning: AC_LANG_CONFTEST: no AC_LANG_SOURCE call detected in body
* updated include/codepage.h, list type
* updated common, libcstring, libuna

20110322
* updated configure.ac
* updated libcstring

20110306
* updated libuna
* msvscpp added VSDebug option

20110303
* update for Cygwin WINAPI support
* updated libcstring

20110117
* updated libuna
* fixed invalid information value issue
* WINAPI added fallback media size detection for floppy drive
* fix for return value of FormatMessage

20110114
* updated common, libuna

20110110
* updated libcstring, libuna

20110108
* updated configure.ac
* updatec common, libcstring, libuna

20110106
* worked on UTF-8 functions

20110104
* updated libcstring, libuna
* 2011 update

20101219
* updated configure, added gettext support
* updated list type, offset list, sector list
* code clean up

20101214
* corrected 'errror'

20101207
* updated common, list type, offset list, sector list, liberror, libnotify,
  libuna
* code clean up

20101119
* updated configure.ac, libcstring, liberror
* fixed bug regarding session values

20101115
* updated offset list
* added libsmdev.rc

20101113
* textual changes